# gnu_mixp

./: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog.old  HACKING  INSTALL.old  Makefile.am  NEWS  README  README.old  THANKS  autogen.sh  check-mixp.in  config.h  configure.ac  generic_handlers.h  gexpat.c  gexpat.h  guile-expat.c  libmixp_la-gexpat.lo
.deps/: guile_expat-guile-expat.Po  libmixp_la-gexpat.Plo
.libs/: guile-expat  libmixp.lai  libmixp.so.0.0.0
build-aux/: snuggle.m4
doc/: Makefile.am  mixp.html  mixp.info  mixp.texi  mixp_toc.html  ref.texh  version.texi
src/: Makefile.am  expat.c  gi.h  mixp.scm  simit.scm  utils.scm
test/: ChangeLog  Makefile.am  README  REC-xml-20081126.xml  runtest.in  sub.inc  test-mixp.scm  test.dtd  x001
xml/: expat.scm  mixp.scm
