# Makefile.am
#
# Copyright (C) 2011 Thien-Thi Nguyen
# Copyright (C) 2002, 2003 Dmitry Morozhnikov
#
# This file is part of Mixp.
#
# Mixp is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or
# (at your option) any later version.
#
# Mixp is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with Mixp; see the file COPYING.  If not,
# write to the Free Software Foundation, Inc., 51 Franklin Street,
# Fifth Floor, Boston, MA  02110-1301  USA

AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I build-aux

SUBDIRS = src doc

EXTRA_DIST = BUGS test xml \
  build-aux/sofix \
  build-aux/uninstall-sofixed \
  build-aux/guile-baux

TESTS = check-mixp

# Makefile.am ends here
